# pico-projects

./: CMakeLists.txt  LICENSE  README.md
libraries/: CMakeLists.txt
libraries/Core/: CMakeLists.txt
libraries/Core/include/: Clock.h  ControlConfiguration.h  Device.h  DisplayRenderable.h  PowerDevice.h  RealTimeClockDevice.h  SerialBus.h  SerialBusDevice.h  TimeDevice.h  TimeScheduler.h
libraries/Core/src/: SerialBus.cpp  SerialBusDevice.cpp  TimeScheduler.cpp
libraries/Devices/: CMakeLists.txt
libraries/Devices/include/: Af128x64FeatherMonoDisplayDevice.h  AfDS3231PrecisionRtcDevice.h  AfPowerRelayDevice.h
libraries/Devices/src/: Af128x64FeatherMonoDisplayDevice.cpp  AfDS3231PrecisionRtcDevice.cpp  AfPowerRelayDevice.cpp
light-controller/: CMakeLists.txt  LightDevice.cpp  LightDevice.hpp  README.md  RealClock.cpp  RealClock.hpp  light_controller.cpp  print_clock.cpp  set_clock.cpp
light-meter/: AlsConfigRegister.cpp  AlsConfigRegister.h  CMakeLists.txt  Display.cpp  Display.h  DisplayLine.cpp  DisplayLine.h  FontManager.cpp  FontManager.h  Glyph.cpp  Glyph.h  LightMeter.cpp  LightSensor.cpp  LightSensor.h  README.md  font_13x8.h
power-controller/: CMakeLists.txt  PowerController.cpp  README.md
rtc-utils/: CMakeLists.txt  SetClock.cpp
